--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.google.sps</groupId>
-  <artifactId>portfolio</artifactId>
+  <artifactId>AQ_Map</artifactId>
   <version>1</version>
   <packaging>war</packaging>
 
@@ -47,8 +47,8 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <!-- TODO: set project ID. -->
-          <deploy.projectId>rosannainternplayground</deploy.projectId>
+          <!--set GCP project ID here -->
+          <deploy.projectId>step269-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
